[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-git-versioning<4"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.codespell]
ignore-words-list = "faktor,trik,borken"
skip = "site/topics/fileIO/airports.csv"

[tool.flake8]
max-line-length = 120
max-complexity = 10
extend-ignore = ["E712"]

[tool.isort]
profile = "black"
multi_line_output = 3

[project]
name = "cs101"
dynamic = ["version"]
authors = [
  { name = "J Hughes", email = "jhughes@stfx.ca" }
]
description = "Introduction to Computer Science"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0" }
urls = { "Homepage" = "https://github.com/jameshughes89/cs101" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
]
dependencies = [
  "black[jupyter]==26.3.1",
  "codespell==2.4.2",
  "flake8==7.3.0",
  "flake8-black==0.4.0",
  "flake8-isort==7.0.0",
  "flake8-pyproject==1.2.4",
  "isort==8.0.1",
  "matplotlib==3.10.8",
  "mdformat==1.0.0",
  "mdformat-gfm==1.0.0",
  "mdformat-black==0.1.1",
  "networkx==3.6.1",
  "sphinx==9.1.0",
  "sphinx-rtd-theme==3.1.0",
  "sphinx-lint==1.0.2",
]

[project.scripts]
format = "console_scripts.cli:run_formatters"
verify = "console_scripts.cli:run_verification"
links = "console_scripts.cli:run_linkcheck"
site = "console_scripts.cli:run_sphinx_build"

